--- a/menu.html
+++ b/menu.html
@@ -35,8 +35,10 @@
                     <img class="img-fluid" style="width: 100%; height: 15rem;" src="img/vegetarian.jpeg" alt="">
                     <div class="card-body">
                         <h3 class="card-title">Vegeterian Pizza</h3>
-                        <span class="card-text">Select toppings and crust</span>
-                        <a href="" class="btn btn-default btn-cust">$10</a>
+                        <div class="group-em">
+                            <span class="card-text">Select toppings and crust</span>
+                            <a href="" class="btn btn-default btn-cust">$10</a>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -45,8 +47,10 @@
                     <img class="img-fluid" style="width: 100%; height: 15rem;" src="img/beefpizza.jpg" alt="">
                     <div class="card-body">
                         <h3 class="card-title">Beef Pizza</h3>
-                        <span class="card-text">Select toppings and crust</span>
-                        <a href="" class="btn btn-default btn-cust">$18</a>
+                        <div class="group-em">
+                            <span class="card-text">Select toppings and crust</span>
+                            <a href="" class="btn btn-default btn-cust">$18</a>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -55,8 +59,10 @@
                     <img class="img-fluid" style="width: 100%; height: 15rem;" src="img/hamburger.jpg" alt="">
                     <div class="card-body">
                         <h3 class="card-title">Hamburger Pizza</h3>
-                        <span class="card-text">Select toppings and crust</span>
-                        <a href="" class="btn btn-default btn-cust">$16</a>
+                        <div class="group-em">
+                            <span class="card-text">Select toppings and crust</span>
+                            <a href="" class="btn btn-default btn-cust">$16</a>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -65,8 +71,10 @@
                     <img class="img-fluid" style="width: 100%; height: 15rem;" src="img/hawaiianpizza.png" alt="">
                     <div class="card-body">
                         <h3 class="card-title"> Hawaiian Pizza</h3>
-                        <span class="card-text">Select toppings and crust</span>
-                        <a href="" class="btn btn-default btn-cust">$12</a>
+                        <div class="group-em">
+                            <span class="card-text">Select toppings and crust</span>
+                            <a href="" class="btn btn-default btn-cust">$12</a>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -75,8 +83,10 @@
                     <img class="img-fluid" style="width: 100%; height: 15rem;" src="img/toppins.jpg" alt="">
                     <div class="card-body">
                         <h3 class="card-title">Topian Pizza</h3>
-                        <span class="card-text">Select toppings and crust</span>
-                        <a href="" class="btn btn-default btn-cust">$10</a>
+                        <div class="group-em">
+                            <span class="card-text">Select toppings and crust</span>
+                            <a href="" class="btn btn-default btn-cust">$10</a>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -85,8 +95,10 @@
                     <img class="img-fluid" style="width: 100%; height: 15rem;" src="img/mozarella.jpg" alt="">
                     <div class="card-body">
                         <h3 class="card-title">Mozarella Pizza</h3>
-                        <span class="card-text">Select toppings and crust</span>
-                        <a href="" class="btn btn-default btn-cust">$17</a>
+                        <div class="group-em">
+                            <span class="card-text">Select toppings and crust</span>
+                            <a href="" class="btn btn-default btn-cust">$17</a>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -95,8 +107,10 @@
                     <img class="img-fluid" style="width: 100%; height: 15rem;" src="img/pepperoni.jpg" alt="">
                     <div class="card-body">
                         <h3 class="card-title">Pepperoni Pizza</h3>
-                        <span class="card-text">Select toppings and crust</span>
-                        <a href="" class="btn btn-default btn-cust">$10</a>
+                        <div class="group-em">
+                            <span class="card-text">Select toppings and crust</span>
+                            <a href="" class="btn btn-default btn-cust">$10</a>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -105,8 +119,10 @@
                     <img class="img-fluid" style="width: 100%; height: 15rem;" src="img/BBQchcicken.jpg" alt="">
                     <div class="card-body">
                         <h3 class="card-title">Chicken Pizza</h3>
-                        <span class="card-text">Select toppings and crust</span>
-                        <a href="" class="btn btn-default btn-cust">$20</a>
+                        <div class="group-em">
+                            <span class="card-text">Select toppings and crust</span>
+                            <a href="" class="btn btn-default btn-cust">$20</a>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -115,8 +131,10 @@
                     <img class="img-fluid" style="width: 100%; height: 15rem;" src="img/WhitePizza.jpg" alt="">
                     <div class="card-body">
                         <h3 class="card-title">White Pizza</h3>
-                        <span class="card-text">Select toppings and crust</span>
-                        <a href="" class="btn btn-default btn-cust">$14</a>
+                        <div class="group-em">
+                            <span class="card-text">Select toppings and crust</span>
+                            <a href="" class="btn btn-default btn-cust">$14</a>
+                        </div>
                     </div>
                 </div>
             </div>
