--- a/menu.html
+++ b/menu.html
@@ -39,6 +39,26 @@
                             <span class="card-text">Select toppings and crust</span>
                             <a href="" class="btn btn-default btn-cust">$10</a>
                         </div>
+                        <form >
+                            <div class="choices">
+                                <div class="crusty">
+                                    <label for="crusts">Crust:</label>
+                                    <select id="cars">
+                                        <option value="crunchy">Crunchy</option>
+                                        <option value="stuffed">Stuffed</option>
+                                    </select>
+                                </div>
+                                <div class="toppings">
+                                    <label for="toppings">Topping:</label>
+                                    <select id="topping">
+                                        <option value="cheese">cheese</option>
+                                        <option value="tomato">Tomato</option>
+                                        <option value="chillies">Chillies</option>
+                                    </select>
+                                </div>
+                            </div>
+                            <input type="submit" class=" btn btn-cust2" value="Add to cart">
+                        </form>
                     </div>
                 </div>
             </div>
