add cart section

--- a/menu.html
+++ b/menu.html
@@ -39,27 +39,27 @@
                             <span class="card-text">Select toppings and crust</span>
                             <a href="" class="btn btn-default btn-cust">$10</a>
                         </div>
-                        <form >
-                            <div class="choices">
-                                <div class="crusty">
-                                    <label for="crusts">Crust:</label>
-                                    <select id="cars">
-                                        <option value="crunchy">Crunchy</option>
-                                        <option value="stuffed">Stuffed</option>
-                                    </select>
-                                </div>
-                                <div class="toppings">
-                                    <label for="toppings">Topping:</label>
-                                    <select id="topping">
-                                        <option value="cheese">cheese</option>
-                                        <option value="tomato">Tomato</option>
-                                        <option value="chillies">Chillies</option>
-                                    </select>
-                                </div>
-                            </div>
-                            <input type="submit" class=" btn btn-cust2" value="Add to cart">
-                        </form>
                     </div>
+                    <form class="form-x">
+                        <div class="choices">
+                            <div class="crusty">
+                                <label for="crusts">Crust:</label>
+                                <select id="cars">
+                                    <option value="crunchy">Crunchy</option>
+                                    <option value="stuffed">Stuffed</option>
+                                </select>
+                            </div>
+                            <div class="toppings">
+                                <label for="toppings">Topping:</label>
+                                <select id="topping">
+                                    <option value="cheese">cheese</option>
+                                    <option value="tomato">Tomato</option>
+                                    <option value="chillies">Chillies</option>
+                                </select>
+                            </div>
+                        </div>
+                        <input type="submit" class=" btn btn-cust2" value="Add to cart">
+                    </form>
                 </div>
             </div>
             <div class="col-md-4">
@@ -72,6 +72,26 @@
                             <a href="" class="btn btn-default btn-cust">$18</a>
                         </div>
                     </div>
+                    <form class="form-x">
+                        <div class="choices">
+                            <div class="crusty">
+                                <label for="crusts">Crust:</label>
+                                <select id="cars">
+                                    <option value="crunchy">Crunchy</option>
+                                    <option value="stuffed">Stuffed</option>
+                                </select>
+                            </div>
+                            <div class="toppings">
+                                <label for="toppings">Topping:</label>
+                                <select id="topping">
+                                    <option value="cheese">cheese</option>
+                                    <option value="tomato">Tomato</option>
+                                    <option value="chillies">Chillies</option>
+                                </select>
+                            </div>
+                        </div>
+                        <input type="submit" class=" btn btn-cust2" value="Add to cart">
+                    </form>
                 </div>
             </div>
             <div class="col-md-4">
@@ -84,6 +104,26 @@
                             <a href="" class="btn btn-default btn-cust">$16</a>
                         </div>
                     </div>
+                    <form class="form-x">
+                        <div class="choices">
+                            <div class="crusty">
+                                <label for="crusts">Crust:</label>
+                                <select id="cars">
+                                    <option value="crunchy">Crunchy</option>
+                                    <option value="stuffed">Stuffed</option>
+                                </select>
+                            </div>
+                            <div class="toppings">
+                                <label for="toppings">Topping:</label>
+                                <select id="topping">
+                                    <option value="cheese">cheese</option>
+                                    <option value="tomato">Tomato</option>
+                                    <option value="chillies">Chillies</option>
+                                </select>
+                            </div>
+                        </div>
+                        <input type="submit" class=" btn btn-cust2" value="Add to cart">
+                    </form>
                 </div>
             </div>
             <div class="col-md-4">
@@ -96,6 +136,26 @@
                             <a href="" class="btn btn-default btn-cust">$12</a>
                         </div>
                     </div>
+                    <form class="form-x">
+                        <div class="choices">
+                            <div class="crusty">
+                                <label for="crusts">Crust:</label>
+                                <select id="cars">
+                                    <option value="crunchy">Crunchy</option>
+                                    <option value="stuffed">Stuffed</option>
+                                </select>
+                            </div>
+                            <div class="toppings">
+                                <label for="toppings">Topping:</label>
+                                <select id="topping">
+                                    <option value="cheese">cheese</option>
+                                    <option value="tomato">Tomato</option>
+                                    <option value="chillies">Chillies</option>
+                                </select>
+                            </div>
+                        </div>
+                        <input type="submit" class=" btn btn-cust2" value="Add to cart">
+                    </form>
                 </div>
             </div>
             <div class="col-md-4">
@@ -108,6 +168,26 @@
                             <a href="" class="btn btn-default btn-cust">$10</a>
                         </div>
                     </div>
+                    <form class="form-x">
+                        <div class="choices">
+                            <div class="crusty">
+                                <label for="crusts">Crust:</label>
+                                <select id="cars">
+                                    <option value="crunchy">Crunchy</option>
+                                    <option value="stuffed">Stuffed</option>
+                                </select>
+                            </div>
+                            <div class="toppings">
+                                <label for="toppings">Topping:</label>
+                                <select id="topping">
+                                    <option value="cheese">cheese</option>
+                                    <option value="tomato">Tomato</option>
+                                    <option value="chillies">Chillies</option>
+                                </select>
+                            </div>
+                        </div>
+                        <input type="submit" class=" btn btn-cust2" value="Add to cart">
+                    </form>
                 </div>
             </div>
             <div class="col-md-4">
@@ -120,6 +200,26 @@
                             <a href="" class="btn btn-default btn-cust">$17</a>
                         </div>
                     </div>
+                    <form class="form-x">
+                        <div class="choices">
+                            <div class="crusty">
+                                <label for="crusts">Crust:</label>
+                                <select id="cars">
+                                    <option value="crunchy">Crunchy</option>
+                                    <option value="stuffed">Stuffed</option>
+                                </select>
+                            </div>
+                            <div class="toppings">
+                                <label for="toppings">Topping:</label>
+                                <select id="topping">
+                                    <option value="cheese">cheese</option>
+                                    <option value="tomato">Tomato</option>
+                                    <option value="chillies">Chillies</option>
+                                </select>
+                            </div>
+                        </div>
+                        <input type="submit" class=" btn btn-cust2" value="Add to cart">
+                    </form>
                 </div>
             </div>
             <div class="col-md-4">
@@ -132,6 +232,26 @@
                             <a href="" class="btn btn-default btn-cust">$10</a>
                         </div>
                     </div>
+                    <form class="form-x">
+                        <div class="choices">
+                            <div class="crusty">
+                                <label for="crusts">Crust:</label>
+                                <select id="cars">
+                                    <option value="crunchy">Crunchy</option>
+                                    <option value="stuffed">Stuffed</option>
+                                </select>
+                            </div>
+                            <div class="toppings">
+                                <label for="toppings">Topping:</label>
+                                <select id="topping">
+                                    <option value="cheese">cheese</option>
+                                    <option value="tomato">Tomato</option>
+                                    <option value="chillies">Chillies</option>
+                                </select>
+                            </div>
+                        </div>
+                        <input type="submit" class=" btn btn-cust2" value="Add to cart">
+                    </form>
                 </div>
             </div>
             <div class="col-md-4">
@@ -144,6 +264,26 @@
                             <a href="" class="btn btn-default btn-cust">$20</a>
                         </div>
                     </div>
+                    <form class="form-x">
+                        <div class="choices">
+                            <div class="crusty">
+                                <label for="crusts">Crust:</label>
+                                <select id="cars">
+                                    <option value="crunchy">Crunchy</option>
+                                    <option value="stuffed">Stuffed</option>
+                                </select>
+                            </div>
+                            <div class="toppings">
+                                <label for="toppings">Topping:</label>
+                                <select id="topping">
+                                    <option value="cheese">cheese</option>
+                                    <option value="tomato">Tomato</option>
+                                    <option value="chillies">Chillies</option>
+                                </select>
+                            </div>
+                        </div>
+                        <input type="submit" class=" btn btn-cust2" value="Add to cart">
+                    </form>
                 </div>
             </div>
             <div class="col-md-4">
@@ -156,6 +296,26 @@
                             <a href="" class="btn btn-default btn-cust">$14</a>
                         </div>
                     </div>
+                    <form class="form-x">
+                        <div class="choices">
+                            <div class="crusty">
+                                <label for="crusts">Crust:</label>
+                                <select id="cars">
+                                    <option value="crunchy">Crunchy</option>
+                                    <option value="stuffed">Stuffed</option>
+                                </select>
+                            </div>
+                            <div class="toppings">
+                                <label for="toppings">Topping:</label>
+                                <select id="topping">
+                                    <option value="cheese">cheese</option>
+                                    <option value="tomato">Tomato</option>
+                                    <option value="chillies">Chillies</option>
+                                </select>
+                            </div>
+                        </div>
+                        <input type="submit" class=" btn btn-cust2" value="Add to cart">
+                    </form>
                 </div>
             </div>
         </div>
