--- a/menu.html
+++ b/menu.html
@@ -42,6 +42,14 @@
                     </div>
                     <form class="form-x">
                         <div class="choices">
+                            <div class="size">
+                                <label for="size">Size:</label>
+                                <select id="size">
+                                    <option value="small">Small</option>
+                                    <option value="medium">Medium</option>
+                                    <option value="large">Large</option>
+                                </select>
+                            </div>
                             <div class="crusty">
                                 <label for="crusts">Crust:</label>
                                 <select id="cars">
@@ -69,11 +77,19 @@
                         <h3 class="card-title">Beef Pizza</h3>
                         <div class="group-em">
                             <span class="card-text">Select toppings and crust</span>
-                            <a href="" class="btn btn-default btn-cust">$18</a>
+                            <a href="" class="btn btn-default btn-cust">$10</a>
                         </div>
                     </div>
                     <form class="form-x">
                         <div class="choices">
+                            <div class="size">
+                                <label for="size">Size:</label>
+                                <select id="size">
+                                    <option value="small">Small</option>
+                                    <option value="medium">Medium</option>
+                                    <option value="large">Large</option>
+                                </select>
+                            </div>
                             <div class="crusty">
                                 <label for="crusts">Crust:</label>
                                 <select id="cars">
@@ -101,11 +117,19 @@
                         <h3 class="card-title">Hamburger Pizza</h3>
                         <div class="group-em">
                             <span class="card-text">Select toppings and crust</span>
-                            <a href="" class="btn btn-default btn-cust">$16</a>
+                            <a href="" class="btn btn-default btn-cust">$10</a>
                         </div>
                     </div>
                     <form class="form-x">
                         <div class="choices">
+                            <div class="size">
+                                <label for="size">Size:</label>
+                                <select id="size">
+                                    <option value="small">Small</option>
+                                    <option value="medium">Medium</option>
+                                    <option value="large">Large</option>
+                                </select>
+                            </div>
                             <div class="crusty">
                                 <label for="crusts">Crust:</label>
                                 <select id="cars">
@@ -133,11 +157,19 @@
                         <h3 class="card-title"> Hawaiian Pizza</h3>
                         <div class="group-em">
                             <span class="card-text">Select toppings and crust</span>
-                            <a href="" class="btn btn-default btn-cust">$12</a>
+                            <a href="" class="btn btn-default btn-cust">$10</a>
                         </div>
                     </div>
                     <form class="form-x">
                         <div class="choices">
+                            <div class="size">
+                                <label for="size">Size:</label>
+                                <select id="size">
+                                    <option value="small">Small</option>
+                                    <option value="medium">Medium</option>
+                                    <option value="large">Large</option>
+                                </select>
+                            </div>
                             <div class="crusty">
                                 <label for="crusts">Crust:</label>
                                 <select id="cars">
@@ -170,6 +202,14 @@
                     </div>
                     <form class="form-x">
                         <div class="choices">
+                            <div class="size">
+                                <label for="size">Size:</label>
+                                <select id="size">
+                                    <option value="small">Small</option>
+                                    <option value="medium">Medium</option>
+                                    <option value="large">Large</option>
+                                </select>
+                            </div>
                             <div class="crusty">
                                 <label for="crusts">Crust:</label>
                                 <select id="cars">
@@ -197,11 +237,19 @@
                         <h3 class="card-title">Mozarella Pizza</h3>
                         <div class="group-em">
                             <span class="card-text">Select toppings and crust</span>
-                            <a href="" class="btn btn-default btn-cust">$17</a>
+                            <a href="" class="btn btn-default btn-cust">$10</a>
                         </div>
                     </div>
                     <form class="form-x">
                         <div class="choices">
+                            <div class="size">
+                                <label for="size">Size:</label>
+                                <select id="size">
+                                    <option value="small">Small</option>
+                                    <option value="medium">Medium</option>
+                                    <option value="large">Large</option>
+                                </select>
+                            </div>
                             <div class="crusty">
                                 <label for="crusts">Crust:</label>
                                 <select id="cars">
@@ -234,6 +282,14 @@
                     </div>
                     <form class="form-x">
                         <div class="choices">
+                            <div class="size">
+                                <label for="size">Size:</label>
+                                <select id="size">
+                                    <option value="small">Small</option>
+                                    <option value="medium">Medium</option>
+                                    <option value="large">Large</option>
+                                </select>
+                            </div>
                             <div class="crusty">
                                 <label for="crusts">Crust:</label>
                                 <select id="cars">
@@ -261,11 +317,19 @@
                         <h3 class="card-title">Chicken Pizza</h3>
                         <div class="group-em">
                             <span class="card-text">Select toppings and crust</span>
-                            <a href="" class="btn btn-default btn-cust">$20</a>
+                            <a href="" class="btn btn-default btn-cust">$10</a>
                         </div>
                     </div>
                     <form class="form-x">
                         <div class="choices">
+                            <div class="size">
+                                <label for="size">Size:</label>
+                                <select id="size">
+                                    <option value="small">Small</option>
+                                    <option value="medium">Medium</option>
+                                    <option value="large">Large</option>
+                                </select>
+                            </div>
                             <div class="crusty">
                                 <label for="crusts">Crust:</label>
                                 <select id="cars">
@@ -293,11 +357,19 @@
                         <h3 class="card-title">White Pizza</h3>
                         <div class="group-em">
                             <span class="card-text">Select toppings and crust</span>
-                            <a href="" class="btn btn-default btn-cust">$14</a>
+                            <a href="" class="btn btn-default btn-cust">$10</a>
                         </div>
                     </div>
                     <form class="form-x">
                         <div class="choices">
+                            <div class="size">
+                                <label for="size">Size:</label>
+                                <select id="size">
+                                    <option value="small">Small</option>
+                                    <option value="medium">Medium</option>
+                                    <option value="large">Large</option>
+                                </select>
+                            </div>
                             <div class="crusty">
                                 <label for="crusts">Crust:</label>
                                 <select id="cars">
