--- a/menu.html
+++ b/menu.html
@@ -37,7 +37,7 @@
                         <h3 class="card-title">Vegeterian Pizza</h3>
                         <div class="group-em">
                             <span class="card-text">Select toppings and crust</span>
-                            <a href="" class="btn btn-default btn-cust">$10</a>
+                            <a href="" class="btn btn-default btn-cust">$10 $12 $13</a>
                         </div>
                     </div>
                     <form class="form-x">
@@ -57,13 +57,18 @@
                                     <option value="stuffed">Stuffed</option>
                                 </select>
                             </div>
-                            <div class="toppings">
-                                <label for="toppings">Topping:</label>
-                                <select id="topping">
-                                    <option value="cheese">cheese</option>
-                                    <option value="tomato">Tomato</option>
-                                    <option value="chillies">Chillies</option>
-                                </select>
+                        </div>
+                        <div class="toppings">
+                            <div class="title">
+                                <label>Topping:</label>
+                            </div>
+                            <div class="contentin">
+                                <input type="checkbox" id="topping1" name="topping1" value="cheese">
+                                <label for="topping1"> Cheese</label><br>
+                                <input type="checkbox" id="topping2" name="topping2" value="tomato">
+                                <label for="topping2"> Tomato</label><br>
+                                <input type="checkbox" id="topping3" name="topping3" value="chillies">
+                                <label for="topping3"> Chillies</label><br><br>
                             </div>
                         </div>
                         <input type="submit" class=" btn btn-cust2" value="Add to cart">
@@ -77,7 +82,7 @@
                         <h3 class="card-title">Beef Pizza</h3>
                         <div class="group-em">
                             <span class="card-text">Select toppings and crust</span>
-                            <a href="" class="btn btn-default btn-cust">$10</a>
+                            <a href="" class="btn btn-default btn-cust">$10 $12 $13</a>
                         </div>
                     </div>
                     <form class="form-x">
@@ -97,13 +102,18 @@
                                     <option value="stuffed">Stuffed</option>
                                 </select>
                             </div>
-                            <div class="toppings">
-                                <label for="toppings">Topping:</label>
-                                <select id="topping">
-                                    <option value="cheese">cheese</option>
-                                    <option value="tomato">Tomato</option>
-                                    <option value="chillies">Chillies</option>
-                                </select>
+                        </div>
+                        <div class="toppings">
+                            <div class="title">
+                                <label>Topping:</label>
+                            </div>
+                            <div class="contentin">
+                                <input type="checkbox" id="topping1" name="topping1" value="cheese">
+                                <label for="topping1"> Cheese</label><br>
+                                <input type="checkbox" id="topping2" name="topping2" value="tomato">
+                                <label for="topping2"> Tomato</label><br>
+                                <input type="checkbox" id="topping3" name="topping3" value="chillies">
+                                <label for="topping3"> Chillies</label><br><br>
                             </div>
                         </div>
                         <input type="submit" class=" btn btn-cust2" value="Add to cart">
@@ -117,7 +127,7 @@
                         <h3 class="card-title">Hamburger Pizza</h3>
                         <div class="group-em">
                             <span class="card-text">Select toppings and crust</span>
-                            <a href="" class="btn btn-default btn-cust">$10</a>
+                            <a href="" class="btn btn-default btn-cust">$10 $12 $13</a>
                         </div>
                     </div>
                     <form class="form-x">
@@ -137,13 +147,18 @@
                                     <option value="stuffed">Stuffed</option>
                                 </select>
                             </div>
-                            <div class="toppings">
-                                <label for="toppings">Topping:</label>
-                                <select id="topping">
-                                    <option value="cheese">cheese</option>
-                                    <option value="tomato">Tomato</option>
-                                    <option value="chillies">Chillies</option>
-                                </select>
+                        </div>
+                        <div class="toppings">
+                            <div class="title">
+                                <label>Topping:</label>
+                            </div>
+                            <div class="contentin">
+                                <input type="checkbox" id="topping1" name="topping1" value="cheese">
+                                <label for="topping1"> Cheese</label><br>
+                                <input type="checkbox" id="topping2" name="topping2" value="tomato">
+                                <label for="topping2"> Tomato</label><br>
+                                <input type="checkbox" id="topping3" name="topping3" value="chillies">
+                                <label for="topping3"> Chillies</label><br><br>
                             </div>
                         </div>
                         <input type="submit" class=" btn btn-cust2" value="Add to cart">
@@ -157,7 +172,7 @@
                         <h3 class="card-title"> Hawaiian Pizza</h3>
                         <div class="group-em">
                             <span class="card-text">Select toppings and crust</span>
-                            <a href="" class="btn btn-default btn-cust">$10</a>
+                            <a href="" class="btn btn-default btn-cust">$10 $12 $13</a>
                         </div>
                     </div>
                     <form class="form-x">
@@ -177,13 +192,18 @@
                                     <option value="stuffed">Stuffed</option>
                                 </select>
                             </div>
-                            <div class="toppings">
-                                <label for="toppings">Topping:</label>
-                                <select id="topping">
-                                    <option value="cheese">cheese</option>
-                                    <option value="tomato">Tomato</option>
-                                    <option value="chillies">Chillies</option>
-                                </select>
+                        </div>
+                        <div class="toppings">
+                            <div class="title">
+                                <label>Topping:</label>
+                            </div>
+                            <div class="contentin">
+                                <input type="checkbox" id="topping1" name="topping1" value="cheese">
+                                <label for="topping1"> Cheese</label><br>
+                                <input type="checkbox" id="topping2" name="topping2" value="tomato">
+                                <label for="topping2"> Tomato</label><br>
+                                <input type="checkbox" id="topping3" name="topping3" value="chillies">
+                                <label for="topping3"> Chillies</label><br><br>
                             </div>
                         </div>
                         <input type="submit" class=" btn btn-cust2" value="Add to cart">
@@ -197,7 +217,7 @@
                         <h3 class="card-title">Topian Pizza</h3>
                         <div class="group-em">
                             <span class="card-text">Select toppings and crust</span>
-                            <a href="" class="btn btn-default btn-cust">$10</a>
+                            <a href="" class="btn btn-default btn-cust">$10 $12 $13</a>
                         </div>
                     </div>
                     <form class="form-x">
@@ -217,13 +237,18 @@
                                     <option value="stuffed">Stuffed</option>
                                 </select>
                             </div>
-                            <div class="toppings">
-                                <label for="toppings">Topping:</label>
-                                <select id="topping">
-                                    <option value="cheese">cheese</option>
-                                    <option value="tomato">Tomato</option>
-                                    <option value="chillies">Chillies</option>
-                                </select>
+                        </div>
+                        <div class="toppings">
+                            <div class="title">
+                                <label>Topping:</label>
+                            </div>
+                            <div class="contentin">
+                                <input type="checkbox" id="topping1" name="topping1" value="cheese">
+                                <label for="topping1"> Cheese</label><br>
+                                <input type="checkbox" id="topping2" name="topping2" value="tomato">
+                                <label for="topping2"> Tomato</label><br>
+                                <input type="checkbox" id="topping3" name="topping3" value="chillies">
+                                <label for="topping3"> Chillies</label><br><br>
                             </div>
                         </div>
                         <input type="submit" class=" btn btn-cust2" value="Add to cart">
@@ -237,7 +262,7 @@
                         <h3 class="card-title">Mozarella Pizza</h3>
                         <div class="group-em">
                             <span class="card-text">Select toppings and crust</span>
-                            <a href="" class="btn btn-default btn-cust">$10</a>
+                            <a href="" class="btn btn-default btn-cust">$10 $12 $13</a>
                         </div>
                     </div>
                     <form class="form-x">
@@ -257,13 +282,18 @@
                                     <option value="stuffed">Stuffed</option>
                                 </select>
                             </div>
-                            <div class="toppings">
-                                <label for="toppings">Topping:</label>
-                                <select id="topping">
-                                    <option value="cheese">cheese</option>
-                                    <option value="tomato">Tomato</option>
-                                    <option value="chillies">Chillies</option>
-                                </select>
+                        </div>
+                        <div class="toppings">
+                            <div class="title">
+                                <label>Topping:</label>
+                            </div>
+                            <div class="contentin">
+                                <input type="checkbox" id="topping1" name="topping1" value="cheese">
+                                <label for="topping1"> Cheese</label><br>
+                                <input type="checkbox" id="topping2" name="topping2" value="tomato">
+                                <label for="topping2"> Tomato</label><br>
+                                <input type="checkbox" id="topping3" name="topping3" value="chillies">
+                                <label for="topping3"> Chillies</label><br><br>
                             </div>
                         </div>
                         <input type="submit" class=" btn btn-cust2" value="Add to cart">
@@ -277,7 +307,7 @@
                         <h3 class="card-title">Pepperoni Pizza</h3>
                         <div class="group-em">
                             <span class="card-text">Select toppings and crust</span>
-                            <a href="" class="btn btn-default btn-cust">$10</a>
+                            <a href="" class="btn btn-default btn-cust">$10 $12 $13</a>
                         </div>
                     </div>
                     <form class="form-x">
@@ -297,13 +327,18 @@
                                     <option value="stuffed">Stuffed</option>
                                 </select>
                             </div>
-                            <div class="toppings">
-                                <label for="toppings">Topping:</label>
-                                <select id="topping">
-                                    <option value="cheese">cheese</option>
-                                    <option value="tomato">Tomato</option>
-                                    <option value="chillies">Chillies</option>
-                                </select>
+                        </div>
+                        <div class="toppings">
+                            <div class="title">
+                                <label>Topping:</label>
+                            </div>
+                            <div class="contentin">
+                                <input type="checkbox" id="topping1" name="topping1" value="cheese">
+                                <label for="topping1"> Cheese</label><br>
+                                <input type="checkbox" id="topping2" name="topping2" value="tomato">
+                                <label for="topping2"> Tomato</label><br>
+                                <input type="checkbox" id="topping3" name="topping3" value="chillies">
+                                <label for="topping3"> Chillies</label><br><br>
                             </div>
                         </div>
                         <input type="submit" class=" btn btn-cust2" value="Add to cart">
@@ -317,7 +352,7 @@
                         <h3 class="card-title">Chicken Pizza</h3>
                         <div class="group-em">
                             <span class="card-text">Select toppings and crust</span>
-                            <a href="" class="btn btn-default btn-cust">$10</a>
+                            <a href="" class="btn btn-default btn-cust">$10 $12 $13</a>
                         </div>
                     </div>
                     <form class="form-x">
@@ -337,13 +372,18 @@
                                     <option value="stuffed">Stuffed</option>
                                 </select>
                             </div>
-                            <div class="toppings">
-                                <label for="toppings">Topping:</label>
-                                <select id="topping">
-                                    <option value="cheese">cheese</option>
-                                    <option value="tomato">Tomato</option>
-                                    <option value="chillies">Chillies</option>
-                                </select>
+                        </div>
+                        <div class="toppings">
+                            <div class="title">
+                                <label>Topping:</label>
+                            </div>
+                            <div class="contentin">
+                                <input type="checkbox" id="topping1" name="topping1" value="cheese">
+                                <label for="topping1"> Cheese</label><br>
+                                <input type="checkbox" id="topping2" name="topping2" value="tomato">
+                                <label for="topping2"> Tomato</label><br>
+                                <input type="checkbox" id="topping3" name="topping3" value="chillies">
+                                <label for="topping3"> Chillies</label><br><br>
                             </div>
                         </div>
                         <input type="submit" class=" btn btn-cust2" value="Add to cart">
@@ -357,7 +397,7 @@
                         <h3 class="card-title">White Pizza</h3>
                         <div class="group-em">
                             <span class="card-text">Select toppings and crust</span>
-                            <a href="" class="btn btn-default btn-cust">$10</a>
+                            <a href="" class="btn btn-default btn-cust">$10 $12 $13</a>
                         </div>
                     </div>
                     <form class="form-x">
@@ -377,13 +417,18 @@
                                     <option value="stuffed">Stuffed</option>
                                 </select>
                             </div>
-                            <div class="toppings">
-                                <label for="toppings">Topping:</label>
-                                <select id="topping">
-                                    <option value="cheese">cheese</option>
-                                    <option value="tomato">Tomato</option>
-                                    <option value="chillies">Chillies</option>
-                                </select>
+                        </div>
+                        <div class="toppings">
+                            <div class="title">
+                                <label>Topping:</label>
+                            </div>
+                            <div class="contentin">
+                                <input type="checkbox" id="topping1" name="topping1" value="cheese">
+                                <label for="topping1"> Cheese</label><br>
+                                <input type="checkbox" id="topping2" name="topping2" value="tomato">
+                                <label for="topping2"> Tomato</label><br>
+                                <input type="checkbox" id="topping3" name="topping3" value="chillies">
+                                <label for="topping3"> Chillies</label><br><br>
                             </div>
                         </div>
                         <input type="submit" class=" btn btn-cust2" value="Add to cart">
