--- a/menu.html
+++ b/menu.html
@@ -79,7 +79,7 @@
                 <div class="card">
                     <img class="img-fluid" style="width: 100%; height: 15rem;" src="img/beefpizza.jpg" alt="">
                     <div class="card-body">
-                        <h3 class="card-title">Beef Pizza</h3>
+                        <h3 class="card-title">Beef-BBQs Pizza</h3>
                         <div class="group-em">
                             <span class="card-text">Select toppings and crust</span>
                             <a href="" class="btn btn-default btn-cust">$10 $12 $13</a>
