--- a/footer.html
+++ b/footer.html
@@ -4,7 +4,7 @@
     <ul>
       <li><a href="/menu.html"> Menu</a></li>
       <li><a href="#about-us"> How it works</a></li>
-      <li><a href="/feedback.html"> Feedback</a></li>
+      <li class="blink_me"><a href="/feedback.html"> Feedback</a></li>
     </ul>
   </div>
   <div class="col-md-3">
