add cart section

--- a/menu.html
+++ b/menu.html
@@ -437,6 +437,41 @@
             </div>
         </div>
     </section>
+    <section class="container" >
+        <br>
+        <h5><strong class="tittle-cart card">CART</strong></h5>
+        <br>
+        <div class="cart-titles">
+            <span class="items col-md-4">ITEM</span>
+            <span class="item-prices col-md-4">PRICE</span>
+            <span class="quantities col-md-4">QUANTITY</span>
+        </div>
+        <div class="added-items">
+            <div class="row">
+                <div class="cart-item col-md-4">
+                    <img class="item-image" src="img/pic1.jpg">
+                    <span class="item-title">Pepperoni</span>
+                </div>
+                <span class="cart-price col-md-4">$10</span>
+                <div class="item-quantity col-md-4">
+                    <input class="item-quantity" type="number" value="1">
+                    <button class="btn btn-cust2 btn-rm" type="button">REMOVE</button>
+                </div>
+            </div>
+        </div>
+        <div class="final">
+            <h4 class="cart-text"><strong> Total Amount:</strong></h4>
+            <span class="total">$90</span>
+        </div>
+        <div class="delivery">
+            <h4><strong>Delivered</strong></h4>
+            <input type="radio" name="deliver" value="yes" class="radio" />Yes
+            <input type="radio" name="deliver" value="no" class="radio" />No
+        </div>
+        <br>
+        <button class="btn btn-cust2 btn-check" type="button">Checkout</button>
+        <br>
+    </section>
     <script id="replace_with_footer" src="footer.js"></script>
 </body>
 
