add cart section

--- a/menu.html
+++ b/menu.html
@@ -447,9 +447,20 @@
             <span class="quantities col-md-4">QUANTITY</span>
         </div>
         <div class="added-items">
-            <div class="row">
+            <div class="add-item-row row">
                 <div class="cart-item col-md-4">
                     <img class="item-image" src="img/pic1.jpg">
+                    <span class="item-title">Pepperoni</span>
+                </div>
+                <span class="cart-price col-md-4">$10</span>
+                <div class="item-quantity col-md-4">
+                    <input class="item-quantity" type="number" value="1">
+                    <button class="btn btn-cust2 btn-rm" type="button">REMOVE</button>
+                </div>
+            </div>
+            <div class="add-item-row row">
+                <div class="cart-item col-md-4">
+                    <img class="item-image" src="img/pic2.jpg">
                     <span class="item-title">Pepperoni</span>
                 </div>
                 <span class="cart-price col-md-4">$10</span>
