link cart section

--- a/menu.html
+++ b/menu.html
@@ -437,7 +437,7 @@
             </div>
         </div>
     </section>
-    <section class="container" >
+    <section class="container" id="cart-sec">
         <br>
         <h5><strong class="tittle-cart card">CART</strong></h5>
         <br>
