link cart section

--- a/navbar.html
+++ b/navbar.html
@@ -8,6 +8,6 @@
         <li><i class="fas fa-phone"></i><a href="#contactus"> Contacts</a></li>
         <li><i class="fas fa-user"></i><a class="disabled" role="button" aria-disabled="true" href="/login.html">
                 Login</a></li>
-        <li><a href="cart.html"><i class="fas fa-shopping-basket"></i></a></li>
+        <li><a href="#cart-sec"><i class="fas fa-shopping-basket"></i></a></li>
     </ul>
 </nav>
