--- a/menu.html
+++ b/menu.html
@@ -300,9 +300,9 @@
       </div>
     </div>
   </div>
-  <div class="modal" id="myModal">
+  <div class="xyz modal" id="myModal">
     <div class="modal-dialog">
-      <div class="modal-content">
+      <div class="card modal-content">
         <div class="modal-header">
           <h4 class="mtitle">HEY YOU ^_^ ! thanks You</h4>
           <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
