--- a/menu.html
+++ b/menu.html
@@ -287,24 +287,24 @@
     </div>
   </section>
 
-  <div class="container-fluid">
-    <div class="customreceipt">
-      <div class="receipt ">
-        <div id="cart card">
+  <div class="container-fluid" id="#cart-sec">
+    <div class="card">
+      <div class="card">
+        <div class="" id="cart">
           <h2 class="mtitle">CHECKOUT PURCHASE</h2>
         </div>
         <div id="total"> </div>
-        <div id="getlocation"></div>
+        <div id="deliver"></div>
         <div id="location"></div>
         <div id="checkout"></div>
       </div>
     </div>
   </div>
-  <div class="xyz modal" id="myModal">
+  <div class="xyz cart modal" id="myModal">
     <div class="modal-dialog">
-      <div class="card modal-content">
+      <div class="modal-content">
         <div class="modal-header">
-          <h4 class="mtitle">HEY YOU ^_^ ! thanks You</h4>
+          <h4 class="card-text txt blink_me">HEY YOU ^_^ ! Welcome again</h4>
           <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
         </div>
         <div class="modal-body">
@@ -318,4 +318,5 @@
   </div>
   <script id="replace_with_footer" src="footer.js"></script>
 </body>
+
 </html>
