--- a/footer.html
+++ b/footer.html
@@ -2,9 +2,9 @@
   <div class="col-md-3">
     <h4>Quick Links</h4>
     <ul>
-      <li><a href="Pizza-Haven/menu.html"> Menu</a></li>
+      <li><a href="/menu.html"> Menu</a></li>
       <li><a href="#about-us"> How it works</a></li>
-      <li class="blink_me"><a href="Pizza-Haven/menu.html"> Feedback</a></li>
+      <li class="blink_me"><a href="/feedback.html"> Feedback</a></li>
     </ul>
   </div>
   <div class="col-md-3">
@@ -14,7 +14,6 @@
       <li>Privacy</li>
       <li>Terms & Conditions</li>
     </ul>
-
   </div>
   <div class="col-md-3">
     <h4>Social Media Tags</h4>
